# Ai-riset

./: .replit  Cargo.toml
.cargo/: config.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/layers/: conv.rs  embedding.rs  linear.rs  mod.rs  normalization.rs  recurrent.rs
