[package]
name = "candle-nn-catalog"
version = "0.1.0"
edition = "2021"

[lib]
name = "candle_nn_catalog"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lab_runner"
path = "src/main.rs"

[dependencies]
# Kunci Mati Candle
candle-core = "=0.8.2"
candle-nn = "=0.8.2"
anyhow = "1.0"
wasm-bindgen = "0.2"

# --- PERTAHANAN UTAMA (Versi 0.2) ---
getrandom = { version = "=0.2.17", features = ["js"] }

# --- VAKSIN VERSI 0.3 (PENTING) ---
# Ini mengaktifkan fiturnya, sedangkan file config.toml mengaktifkan backend-nya.
# Dua-duanya harus ada agar v0.3 jalan.
getrandom_v3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

# --- KUNCI DEPENDENSI LAIN ---
rand = "=0.8.5"
rand_core = "=0.6.4"
rand_chacha = "=0.3.1"
half = "=2.3.1"
