[package]
name = "candle-nn-catalog"
version = "0.1.0"
edition = "2021"

[lib]
name = "candle_nn_catalog"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lab_runner"
path = "src/main.rs"

[dependencies]
# --- KUNCI MATI CANDLE ---
candle-core = "=0.8.2"
candle-nn = "=0.8.2"

anyhow = "1.0"
wasm-bindgen = "0.2"

# --- PERBAIKAN: TAMBAHKAN INI ---
console_error_panic_hook = "0.1"

# --- PERTAHANAN DEPENDENCY ---
getrandom = { version = "=0.2.17", features = ["js"] }
# Vaksin untuk getrandom v0.3 (jaga-jaga)
getrandom_v3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

rand = "=0.8.5"
rand_core = "=0.6.4"
rand_chacha = "=0.3.1"
half = "=2.3.1"
